# ImposterGame/ImposterGame.App/Imposter/src/server/api/gameApi.service.ts
@@ -201,6 +201,54 @@ export class GameApiService {
     /**
      * 
      * 
+     * @param body 
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public apiGameApiLeavePost(body?: JoinGameModel, observe?: 'body', reportProgress?: boolean): Observable<IGame>;
+    public apiGameApiLeavePost(body?: JoinGameModel, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<IGame>>;
+    public apiGameApiLeavePost(body?: JoinGameModel, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<IGame>>;
+    public apiGameApiLeavePost(body?: JoinGameModel, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'text/plain',
+            'application/json',
+            'text/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json',
+            'text/json',
+            'application/_*+json'
+        ];
+        const httpContentTypeSelected: string | undefined = this.configuration.selectHeaderContentType(consumes);
+        if (httpContentTypeSelected != undefined) {
+            headers = headers.set('Content-Type', httpContentTypeSelected);
+        }
+
+        return this.httpClient.post<IGame>(`${this.basePath}/api/GameApi/Leave`,
+            body,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     * 
+     * 
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
